# challenge_digitalsys

./: .gitignore
backend/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  apps.py  forms.py  manager.py  models.py  signals.py  urls.py  views.py
backend/apps/accounts/api/: serializers.py  viewsets.py
backend/apps/accounts/templates/accounts/: login.html
backend/apps/core/: models.py  pagination.py  urls.py
backend/apps/core/utils/: list_urls.py
backend/apps/core/utils/api/: mixin.py  permissions.py  throttling.py
backend/apps/core/utils/convert/: contries.py
backend/apps/core/utils/str_format/: strs.py
backend/apps/core/utils/validator/: str_regex.py
backend/apps/dynamic_forms/: admin.py  apps.py  models.py  signals.py
backend/backend/: _settings.py  urls.py
backend/backend/settings/: __init__.py  auth_settings.py  base.py  celery_settings.py  database_settings.py  email_settings.py  host_settings.py  installed_apps_settings.py  internationalizations_settings.py  media_settings.py  middleware_settings.py  rest_framework_settings.py
